--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -7,17 +7,11 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_USER: akhil 
-      POSTGRES_PASSWORD: akhil 
-      POSTGRES_DB: timescale_data
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - timescale_data:/var/lib/postgresql/data
-
-  # redis:
-  #   image: redis:latest
-  #   container_name: redis
-  #   ports:
-  #     - "6379:6379"
 
 volumes:
   timescale_data:
