--- a/backend/db/package.json
+++ b/backend/db/package.json
@@ -1,18 +1,16 @@
 {
   "name": "db",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5.0.0"
+  "scripts": {
+    "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "dotenv": "^16.4.7",
+    "hono": "^4.6.17",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
     "sequelize-cli": "^6.6.2"
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
   }
 }
