--- a/backend/db/package.json
+++ b/backend/db/package.json
@@ -4,6 +4,7 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@types/sequelize": "^4.28.20",
     "hono": "^4.6.17",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
