--- a/backend/docker/docker-compose.yml
+++ b/backend/docker/docker-compose.yml
@@ -12,7 +12,11 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - timescale_data:/var/lib/postgresql/data
-
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
 volumes:
   timescale_data:
     driver: local
