--- a/backend/engine/package.json
+++ b/backend/engine/package.json
@@ -4,7 +4,8 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
-    "hono": "^4.6.18"
+    "hono": "^4.6.18",
+    "redis": "^4.7.0"
   },
   "devDependencies": {
     "@types/bun": "latest"
